// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen persons config import-export] should create the persons: the persons have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ person => Environment/cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen persons config import-export] should throw exception when new persons to import miss mandatory properties persons: exception has been thrown 1`] = `
Object {
  "stderr": "Mandatory properties [userName] not set in person 'Environment/emptyCfgObjectTest'
Cannot import configuration: some configuration objects' mandatory properties for creation are not set.
",
  "stdout": "",
}
`;

exports[`[mutagen persons config import-export] should update the persons: the persons have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ person => Environment/cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;
